Fix title overflow

--- a/src/scss/sections/_projects.scss
+++ b/src/scss/sections/_projects.scss
@@ -80,7 +80,7 @@
           font-family: var(--fira-code);
         }
         &-title {
-          width: max-content;
+          width: 100%;
           color: var(--text-light);
           font-size: var(--txlarge);
           font-family: var(--raleway);
